# aitoc-research-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
audits/: README.md
audits/falsification/: 2026-06-09.md  2026-07-13.md
audits/freshness/: 2026-06-09.md  2026-07-05.md  2026-07-13.md
configs/: env.example  output_targets.json  source_connectors.json  source_queries.json
connectors/: README.md
data/evidence_index/: README.md  evidence-2026-06-09-doubao-paid-tiers-secondary.json  evidence-2026-06-09-microsoft-copilot-business-pricing.json  evidence-2026-06-09-microsoft-copilot-experiences.json  evidence-2026-07-13-microsoft-microsoft-s-copilot-support-page-last-updated-a.json  evidence-2026-07-13-microsoft-per-microsoft-s-copilot-support-page-last-updat.json
data/ingestion_queue/: README.md
data/product_profiles/: README.md  doubao.json  microsoft-copilot.json
docs/: agent_design.md  output_strategy.md  plan_changelog.md  publishing_setup.md  repository_strategy.md  research_plan.md  research_questions.md  source_strategy.md  trend_discovery_strategy.md
docs/case_studies/: doubao.md  microsoft_copilot.md
docs/decision_records/: 0001-separate-evidence-knowledge-findings.md  (+1 more)
findings/: README.md
hypotheses/: registry.json
knowledge_base/: README.md
models/: README.md
outputs/: README.md
schemas/: evidence_item.schema.json  product_profile.schema.json  topic.schema.json  trend_signal.schema.json
scripts/: e2e_publish_today.py
tests/: test_cli.py
topics/: README.md  active_topic  registry.json
trend_radar/: README.md
(+79 files in other folders)
